# py-project-template

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: pr-check.yaml
