[tool.poetry]
name = "python_project_template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
disable = C0330, C0326
max-line-length = 88

[tool.pytest.ini_options]
addopts = "--cov-fail-under=80"
testpaths = ["tests"]
markers =
		unit
		integration
