[tool.poetry]
name = "python_project_template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pylint = "^2.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.message_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = 88

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
addopts = "--cov-fail-under=80"
testpaths = ["tests"]
markers = ["unit", "integration"]
